# rust_template

./: Cargo.toml  LICENSE  README.md  lib.rs
src/: main.rs
